--- a/src/frontend/css/signin/signin.css
+++ b/src/frontend/css/signin/signin.css
@@ -5,7 +5,10 @@
 }
 :root{
 
+--button-font-family:"Judson", serif;;
+   
 }
+
 
 main{
     width: 100%;
@@ -67,7 +70,6 @@ header img{
 
 
 .hero-left-head1{
-    font-family: "Judson", serif;
     font-weight: 700;
     font-style: normal;
     font-family: "Josefin Sans", sans-serif;
@@ -88,7 +90,7 @@ header img{
     border-left: 0.2em solid black;
     padding:0.4em 0.5em ;
 }
-
+ 
 .hero-left-about-link{
     width: 100%;
     display: flex;
@@ -172,7 +174,7 @@ border-bottom: 2px solid #004D2F;
     border-radius:0.5rem;
     padding: 0.10em 0.9em;
     font-family: "Josefin Sans", sans-serif;
-transition-duration: 0.3s;
+    transition-duration: 0.3s;
 }
 .login-form-login-btn button:hover{
     cursor: pointer;
